--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.6.1",
     "ejs": "^3.1.9",
     "express": "^4.22.1",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "mercadopago": "^2.11.0",
